Fixed vertical centering on small menus

--- a/app/src/main/assets/css/main.css
+++ b/app/src/main/assets/css/main.css
@@ -159,7 +159,7 @@ ul {
     transform: translateY(-10%);
 }
 
-.verticalCenteringLogin {
+.verticalCenteringSmall {
     position: relative;
     top: 25%;
     transform: translateY(-25%);
